--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,21 @@ body {
     position: relative;
 }
 
+.control-container {
+    position: absolute;
+    /*visibility: hidden;*/
+    left: 25%;
+    top: 50%;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 10px;
+    background-color: white;
+    border: 3px solid black;
+    width: 50%;
+}
+
 .hidden {
     display: none;
   }
