--- a/public/style.css
+++ b/public/style.css
@@ -46,6 +46,7 @@ body {
     padding: 30px 10px;
     background-color: white;
     border: 3px solid black;
+    border-radius: 6px;
     width: 50%;
 }
 
