--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: lightgreen;
     word-wrap: break-word;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 .game-container {
     width: 100%;
@@ -57,12 +60,12 @@ body {
 
 
 .leaderboard-container {
-    position: absolute;
     /* visibility: hidden; */
     left: 0%;
     top: 10%;
     z-index: 10;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     /* align-items: center; */
     padding: 30px 10px;
@@ -70,4 +73,7 @@ body {
     border: 3px solid black;
     border-radius: 6px;
     width: 10%;
+}
+.leaderboard-header {
+
 }
