--- a/public/style.css
+++ b/public/style.css
@@ -60,20 +60,17 @@ body {
 
 
 .leaderboard-container {
-    /* visibility: hidden; */
-    left: 1%;
-    top: 10%;
     z-index: 10;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* align-items: center; */
-    padding: 30px 10px;
+    align-items: center;
+    padding: 10px 10px;
     background-color: white;
     border: 3px solid black;
     border-radius: 6px;
     width: 10%;
 }
 .leaderboard-header {
-
+    border-bottom: 2px solid lightgray;
+    justify-content: center;
 }
