--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 10px;
+    padding: 5px 5px;
     background-color: white;
     border: 3px solid black;
     border-radius: 6px;
@@ -72,5 +72,8 @@ body {
 }
 .leaderboard-header {
     border-bottom: 2px solid lightgray;
-    justify-content: center;
+    line-height: 25px;
+    height: 25px;
+    font-weight: 900;
+    font-size: larger;
 }
