--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,8 @@ body {
     word-wrap: break-word;
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
+    padding: 0px 5px;
 }
 .game-container {
     width: 100%;
@@ -37,11 +38,39 @@ body {
     position: relative;
 }
 
+.tiles-container {
+    display: grid;
+    grid-template: auto auto auto auto auto auto / auto auto auto auto auto auto;
+    grid-column-gap: 4px;
+    grid-row-gap: 4px;
+    width: 100%;
+    height: 100%;
+}
+
+.tile-element {
+    position:relative;
+    align-items: center;
+    justify-content: center;
+    margin: 4px;
+    font-weight: 700;
+    font-size: 50px;
+    border: 3px solid lightgray;
+    background-color: white;
+}
+
+.tile-back a {
+    color: blue;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
 .control-container {
     position: absolute;
     /*visibility: hidden;*/
-    left: 25%;
-    top: 50%;
+    left: 32%;
+    top: 25%;
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -50,7 +79,7 @@ body {
     background-color: white;
     border: 3px solid black;
     border-radius: 6px;
-    width: 50%;
+    width: 25%;
 }
 
 .hidden {
