--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,7 @@ body {
     font-size: 50px;
     border: 3px solid lightgray;
     background-color: white;
+    box-shadow: 10px 5px 10px gray;
 }
 
 .tile-info-element {
@@ -68,6 +69,7 @@ body {
     font-size: 20px;
     border: 3px solid lightgray;
     background-color: lightcoral;
+    box-shadow: 10px 5px 10px gray;
 }
 
 .tile-back a {
