Added request body parsing to fix errors

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
             Put script sources here
         -->
         <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.runtime.js"></script>
+        <script src="leaderboardItemTemplate.js"charset="utf-8" defer></script>
         <script src="index.js" charset="utf-8" defer></script>
     </head>
     <body>
