--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -347,7 +347,7 @@
                 <div class="modal-body">
                     <div class="name-input-element">
                         
-                        <label for="name-input">Name</label>
+                        <label for="name-input">3 Letter Name</label>
                         <input type="text" id="name-input" maxlength="3" />
                     </div>
                 </div>
