--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -336,7 +336,32 @@
             </div>
         </div>
 
+        <div id="instructions">
+            <div id="instructions-header">
+                <h3>Instructions</h3>
+            </div>
+            <div id="instructions-body">
+                <div class="instructions-paragraph">
+                    Welcome to Voltorb Flip Speedrun, a project by Garrett Biwer and Lucas Dunn.
+                </div>
+                <div class="instructions-paragraph">
+                    In this game, there are 4 types of tiles, voltorbs, 1s, 2s, and 3s. The voltorbs are represented by 0s. The goal is to find every 2 and 3 tile, and avoid the 0 tiles, so you don't get blown up!
+                </div>
+                <div class="instructions-paragraph">
+                    In every red square, you will find key info about the corresponding row, or column. The top number is the total number of points in that row or column, and the bottom number is the number of voltorbs in that row or column.
+                </div>
+                <div class="instructions-paragraph">
+                    For example, a “6/0” means there are 6 total points in the row and 0 voltorbs - youre safe to flip all of them! However, you will only find a single 2 tile, with the rest being 1 tiles, since the total must be 6! 
+                </div>
+                <div class="instructions-paragraph">
+                    Hint: If the sum of the top and bottom numbers add up to 5, you do not need to flip any in that row, as you will not find any 2s or 3s. 
+                </div>
+            </div>
 
+
+
+
+        </div>
 
         <div id="modal-backdrop" class="hidden"></div>
         <div id="add-name-modal" class="hidden">
