--- a/public/style.css
+++ b/public/style.css
@@ -88,7 +88,7 @@ body {
     position: absolute;
     /*visibility: hidden;*/
     left: 28.25%;
-    top: 60%;
+    top: 0%;
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -98,6 +98,7 @@ body {
     border: 3px solid black;
     border-radius: 6px;
     width: 25%;
+    height: 1%;
 }
 
 .hidden {
