--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -354,7 +354,7 @@
                     For example, a “6/0” means there are 6 total points in the row and 0 voltorbs - youre safe to flip all of them! However, you will only find a single 2 tile, with the rest being 1 tiles, since the total must be 6! 
                 </div>
                 <div class="instructions-paragraph">
-                    Hint: If the sum of the top and bottom numbers add up to 5, you do not need to flip any in that row, as you will not find any 2s or 3s. 
+                    Hint: You only need to flip the 2s and 3s, not the 1s! Don't take any unnecessary risks!
                 </div>
             </div>
 
